✨ Add new metadata column "main_purpose"

--- a/ddj_cloud/scrapers/talsperren/tooltips/map.html
+++ b/ddj_cloud/scrapers/talsperren/tooltips/map.html
@@ -16,6 +16,10 @@
     <td>{{ federation_name }}</td>
   </tr>
   <tr>
+    <td><b>Hauptaufgabe:</b></td>
+    <td>{{ main_purpose }}</td>
+  </tr>
+  <tr>
     <td><b>Messzeitpunkt:</b></td>
     <td>{{ FORMAT(ts_measured, "DD.MM.YYYY HH:mm") }}</td>
   </tr>
