--- a/ddj_cloud/scrapers/talsperren/tooltips/map_no_graphs.html
+++ b/ddj_cloud/scrapers/talsperren/tooltips/map_no_graphs.html
@@ -3,8 +3,8 @@
     <big>
       <div style="margin-bottom: 6px">
         <div style="background: #f2f2f2; width: 100%; height: 22px; display: flex; align-items: center">
-          <div style="display:flex; background: {{ fill_percent >= 100 ? "#e30614" : fill_percent >= 90 ? "#0048a2" : fill_percent >= 75 ? "#529ddc" : fill_percent >= 50 ? "#77dbf9" : fill_percent >= 25 ? "#eb3620" : "#eb3620" }}; align-items:center; height:100%; width: {{fill_percent}}%">
-            <span style='color: {{ fill_percent >= 90 ? "white" : fill_percent >= 75 ? "white" : fill_percent >= 50 ? "black" : fill_percent >= 25 ? "black" : "black" }}; font-weight: bold; margin: 0px 5px; margin-left: {{ fill_percent >= 25 ? "5px" : "30px" }}'> {{ FORMAT(fill_percent, '0.0')}}%{{ fill_percent >= 100 ? " &#8594; TS läuft über" : ""}}</span>
+          <div style="display:flex; background: {{ fill_percent >= 100 ? "#e30614" : fill_percent >= 90 ? "#0048a2" : fill_percent >= 75 ? "#529ddc" : fill_percent >= 50 ? "#77dbf9" : fill_percent >= 25 ? "#fcc757" : "#e30614" }}; align-items:center; height:100%; width: {{fill_percent}}%">
+            <span style='color: {{ fill_percent >= 90 ? "white" : fill_percent >= 75 ? "white" : fill_percent >= 50 ? "black" : fill_percent >= 25 ? "black" : "white" }}; font-weight: bold; margin: 0px 5px; margin-left: {{ fill_percent >= 25 ? "5px" : "30px" }}'> {{ FORMAT(fill_percent, '0.0')}}%{{ fill_percent >= 100 ? " &#8594; TS läuft über" : ""}}</span>
           </div>
         </div>
       </div>
